Fix rutas para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <!-- CSS -->
-<link rel="stylesheet" href="../css/inicio.css">
+<link rel="stylesheet" href="Frontend/css/inicio.css">
 
 <!-- JS -->
-<script src="../js/inicio.js"></script>
+<script src="Frontend/js/inicio.js"></script>
 
 </head>
 
