Fix rutas para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
 </div>
 
 
-     <a href="inicio.html" class="brand-logo-link">
+     <a href="index.html" class="brand-logo-link">
   <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/NASA_logo.svg" class="brand-logo" alt="NASA">
 </a>
 
 
     <div class="header-right">
   <nav class="main-nav">
-    <a href="missiones.html">Misiones</a>
+    <a href="Frontend/template/missiones.html">Misiones</a>
     
-    <a href="tecnologia.html">Tecnología</a>
+    <a href="Frontend/template/tecnologia.html">Tecnología</a>
     <a href="#">NASA TV</a>
     <a href="#">Noticias</a>
 
   
 
   <!-- BOTÓN LOGIN / REGISTRO -->
-  <a href="logininiciodesesion.html" class="login-btn">
+  <a href="Frontend/template/logininiciodesesion.html" class="login-btn">
     <i class="fas fa-user-astronaut"></i>
     Acceder
   </a>
@@ -83,7 +83,7 @@
 <!-- HERO -->
 <section class="hero">
   <video class="hero-video" autoplay muted loop playsinline>
-    <source src="../img/0_Galaxy_Spiral_Galaxy_3840x2160.mp4" type="video/mp4">
+    <source src="Frontend/img/0_Galaxy_Spiral_Galaxy_3840x2160.mp4" type="video/mp4">
     Tu navegador no soporta video HTML5
   </video>
 
@@ -105,19 +105,19 @@
 
   <div class="news-container">
     <article class="news-card">
-      <img src="../img/Noticia1.webp">
+      <img src="Frontend/img/Noticia1.webp">
       <span class="news-tag">Exploración orbital</span>
       <h3>Nueva observación de la Estación Espacial Internacional</h3>
     </article>
 
     <article class="news-card">
-      <img src="../img/Noticia2.jpg">
+      <img src="Frontend/img/Noticia2.jpg">
       <span class="news-tag">Programa Artemis</span>
       <h3>La NASA avanza en el regreso humano a la Luna</h3>
     </article>
 
     <article class="news-card">
-      <img src="../img/Noticia3.jpg">
+      <img src="Frontend/img/Noticia3.jpg">
       <span class="news-tag">Astrobiología</span>
       <h3>Moléculas orgánicas detectadas en una nube interestelar</h3>
     </article>
@@ -128,7 +128,7 @@
 <section class="feature-story-bg">
 
   <!-- IMAGEN DE FONDO -->
-  <img src="../img/webb-tarantula-neb.webp" alt="Fondo Universo" class="feature-bg-img" />
+  <img src="Frontend/img/webb-tarantula-neb.webp" alt="Fondo Universo" class="feature-bg-img" />
 
   <!-- CAPA OSCURA -->
   <div class="feature-overlay"></div>
@@ -155,19 +155,19 @@
 
   <div class="missions-grid">
     <div class="mission-card">
-      <img src="../img/Mision1.webp">
+      <img src="Frontend/img/Mision1.webp">
       <h3>Exploración Lunar</h3>
       <p>Presencia sostenible más allá de la Tierra.</p>
     </div>
 
     <div class="mission-card">
-      <img src="../img/Mision2.webp">
+      <img src="Frontend/img/Mision2.webp">
       <h3>Naves Espaciales</h3>
       <p>Tecnología avanzada para el espacio profundo.</p>
     </div>
 
     <div class="mission-card">
-      <img src="../img/Mision3.jpg">
+      <img src="Frontend/img/Mision3.jpg">
       <h3>Comunicación Espacial</h3>
       <p>Conectando misiones a millones de kilómetros.</p>
     </div>
