--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   </div>
 
   <div class="image-day-visual">
-    <img src="../img/imagendeldia.webp">
+    <img src="Frontend/img/imagendeldia.webp">
   </div>
 </section>
 
@@ -194,7 +194,7 @@
 <section class="nasa-subscribe">
 
   <!-- IMAGEN DE FONDO DESDE HTML -->
-  <img src="../IMG/ngc602.jpg" alt="Fondo Universo" class="nasa-bg-img" />
+  <img src="Frontend/img/ngc602.jpg" alt="Fondo Universo" class="nasa-bg-img" />
 
   <!-- CAPA OSCURA -->
   <div class="nasa-overlay"></div>
@@ -217,8 +217,10 @@
       <a href="#">política de privacidad ↗</a>
     </p>
 
-    <a href="#" class="subscribe-btn">Inscribirse ↗</a>
+    <a href="Frontend/template/selecionar-plan.html" class="btn-inscribirse">Inscribirse ↗</a>
   </div>
+
+  
 
 </section>
 </main>
@@ -229,7 +231,7 @@
     <div class="footer-col logo-col">
       <div class="logo-box">
         <!-- TU LOGO AQUÍ -->
-        <img src="../img/logo.jpg" alt="Logo" />
+        <img src="Frontend/img/logo.jpg" alt="Logo" />
       </div>
 
       <h3>Administración Nacional<br>de Aeronáutica y del Espacio</h3>
